--- a/pedidos.html
+++ b/pedidos.html
@@ -93,7 +93,7 @@
     <div class="form-group">
         <h3>Seleccionar Producto y Cantidad</h3>
         <div class="categoria-producto">
-            <img src="images/Pizza.png" alt="Pizza" class="categoria-imagen">
+            <img src="images/pizza.png" alt="Pizza" class="categoria-imagen">
             <div class="categoria-items">
                 <div class="producto-item">
                     <label><input type="checkbox" name="productos[]" value="1"> Pizza Muzzarella</label>
