--- a/pedidos.html
+++ b/pedidos.html
@@ -184,7 +184,7 @@
     <a href="total.html">Total de Pedidos</a>
     <a href="clientes.html">Clientes</a>
     <a href="productos.html">Productos</a>
-    <a href="pedidos.html" style="float:right;">Cerrar sesión</a>
+    <a href="index.html" style="float:right;">Cerrar sesión</a>
 </div>
 
 </body>
