--- a/total.html
+++ b/total.html
@@ -134,7 +134,7 @@
     <a href="total.html" class="active">Total de Pedidos</a>
     <a href="clientes.html">Clientes</a>
     <a href="productos.html">Productos</a>
-    <a href="logout.html" style="float:right;">Cerrar sesión</a>
+    <a href="index.html" style="float:right;">Cerrar sesión</a>
 </div>
 
 <div class="content">
