--- a/pedidos.html
+++ b/pedidos.html
@@ -179,13 +179,22 @@
 </form>
 
 <div class="navbar">
-    <a href="inicio.html">Inicio</a>
-    <a href="pedidos.html" class="active">Agregar Pedidos</a>
-    <a href="total.html">Total de Pedidos</a>
-    <a href="clientes.html">Clientes</a>
-    <a href="productos.html">Productos</a>
-    <a href="index.html" style="float:right;">Cerrar sesión</a>
+    <button id="menu-toggle" aria-label="Abrir menú">☰</button>
+    <ul class="nav-list">
+        <li><a href="inicio.html" class="active">Inicio</a></li>
+        <li><a href="pedidos.html">Agregar Pedidos</a></li>
+        <li><a href="total.html">Total de Pedidos</a></li>
+        <li><a href="clientes.html">Clientes</a></li>
+        <li><a href="productos.html">Productos</a></li>
+        <li><a href="index.html" class="cerrar-sesion">Cerrar sesión</a></li>
+    </ul>
 </div>
+
+<script>
+    document.getElementById('menu-toggle').onclick = function () {
+        document.querySelector('.nav-list').classList.toggle('open');
+    };
+</script>
 
 </body>
 </html>
