--- a/inicio.html
+++ b/inicio.html
@@ -59,9 +59,9 @@
                 <td>$2000.00</td>
                 <td class="fecha-col">2025-06-17</td>
                 <td>
-                    <form method="POST" action="completar.php" style="display:inline-block;">
+                    <form method="POST" style="display:inline-block;">
                         <input type="hidden" name="pedido_id" value="1">
-                        <button type="submit" name="transferir_pedido" title="Completar pedido">Completar ✓ </button>
+                        <button type="submit" name="transferir_pedido" title="Completar pedido">✅</button>
                     </form>
                     <form method="POST" action="editar_pedido.php" style="display:inline-block;">
                         <input type="hidden" name="pedido_id" value="1">
@@ -84,7 +84,7 @@
                 <td>
                     <form method="POST" action="completar.php" style="display:inline-block;">
                         <input type="hidden" name="pedido_id" value="2">
-                        <button type="submit" name="transferir_pedido" title="Completar pedido">Completar ✓</button>
+                        <button type="submit" name="transferir_pedido" title="Completar pedido">✅</button>
                     </form>
                     <form method="POST" action="editar_pedido.php" style="display:inline-block;">
                         <input type="hidden" name="pedido_id" value="2">
@@ -105,7 +105,7 @@
                 <td>
                     <form method="POST" action="completar.php" style="display:inline-block;">
                         <input type="hidden" name="pedido_id" value="3">
-                        <button type="submit" name="transferir_pedido" title="Completar pedido">Completar ✓</button>
+                        <button type="submit" name="transferir_pedido" title="Completar pedido">✅</button>
                     </form>
                     <form method="POST" action="editar_pedido.php" style="display:inline-block;">
                         <input type="hidden" name="pedido_id" value="3">
@@ -133,7 +133,7 @@
                 <td>
                     <form method="POST" action="completar.php" style="display:inline-block;">
                         <input type="hidden" name="pedido_id" value="4">
-                        <button type="submit" name="transferir_pedido" title="Completar pedido">Completar ✓</button>
+                        <button type="submit" name="transferir_pedido" title="Completar pedido">✅</button>
                     </form>
                     <form method="POST" action="editar_pedido.php" style="display:inline-block;">
                         <input type="hidden" name="pedido_id" value="4">
