Update pedidos.html 480

--- a/pedidos.html
+++ b/pedidos.html
@@ -181,8 +181,8 @@
 <div class="navbar">
     <button id="menu-toggle" aria-label="Abrir menú">☰</button>
     <ul class="nav-list">
-        <li><a href="inicio.html" class="active">Inicio</a></li>
-        <li><a href="pedidos.html">Agregar Pedidos</a></li>
+        <li><a href="inicio.html">Inicio</a></li>
+        <li><a href="pedidos.html" class="active">Agregar Pedidos</a></li>
         <li><a href="total.html">Total de Pedidos</a></li>
         <li><a href="clientes.html">Clientes</a></li>
         <li><a href="productos.html">Productos</a></li>
