--- a/total.html
+++ b/total.html
@@ -5,136 +5,23 @@
     <title>Total de Pedidos</title>
     <link rel="stylesheet" href="style/inicio.css">
     <link rel="stylesheet" href="style/navbar.css">
+    <link rel="stylesheet" href="style/total.css">
     <link rel="icon" href="images/icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        .content {
-            max-width: 1100px;
-            margin: 0 auto;
-            padding: 2rem;
-            padding-top: 80px;
-        }
-
-        .resumen-totales {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-bottom: 1rem;
-        }
-
-        .resumen-totales div {
-            background-color: white;
-            border-radius: 10px;
-            padding: 10px 20px;
-            text-align: center;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-        }
-
-        .resumen-totales div strong {
-            display: block;
-            font-size: 18px;
-            margin-bottom: 5px;
-        }
-
-        .resumen-totales div span {
-            font-weight: bold;
-            color: #d32f2f;
-        }
-
-        .busqueda-cliente {
-            background-color: white;
-            padding: 1rem;
-            border-radius: 8px;
-            width: fit-content;
-            margin: auto;
-            margin-bottom: 1.5rem;
-            display: flex;
-            align-items: center;
-        }
-
-        .busqueda-cliente input[type="text"] {
-            padding: 0.5rem;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            font-size: 14px;
-            margin-right: 10px;
-        }
-
-        .busqueda-cliente button, .busqueda-cliente a {
-            padding: 0.5rem 1rem;
-            border: none;
-            font-size: 14px;
-            text-decoration: none;
-            color: white;
-            border-radius: 5px;
-            margin-left: 5px;
-        }
-
-        .busqueda-cliente button {
-            background-color: #d84315;
-            cursor: pointer;
-        }
-
-        .busqueda-cliente a {
-            background-color: #333;
-        }
-
-        table.tabla-pedidos {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 1rem;
-            border-radius: 10px;
-            overflow: hidden;
-        }
-
-        table.tabla-pedidos th {
-            background-color: #e64e08;
-            color: white;
-            padding: 12px;
-        }
-
-        table.tabla-pedidos td {
-            background-color: #f9f9f9;
-            padding: 12px;
-            text-align: center;
-            border-bottom: 1px solid #ddd;
-        }
-
-        table.tabla-pedidos tr:last-child td {
-            font-weight: bold;
-            background-color: #fff3e0;
-        }
-
-        button.eliminar {
-            background-color: #e53935;
-            color: white;
-            border: none;
-            padding: 6px 12px;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        h2, h3 {
-            text-align: center;
-            margin-top: 1rem;
-        }
-    </style>
 </head>
 <body>
 
+<!-- Navbar responsive -->
 <div class="navbar">
-    <a href="inicio.html">Inicio</a>
-    <a href="pedidos.html">Agregar Pedidos</a>
-    <a href="total.html" class="active">Total de Pedidos</a>
-    <a href="clientes.html">Clientes</a>
-    <a href="productos.html">Productos</a>
-    <a href="index.html" style="float:right;">Cerrar sesión</a>
+    <button id="menu-toggle" aria-label="Abrir menú">☰</button>
+    <ul class="nav-list">
+        <li><a href="inicio.html">Inicio</a></li>
+        <li><a href="pedidos.html">Agregar Pedidos</a></li>
+        <li><a href="total.html" class="active">Total de Pedidos</a></li>
+        <li><a href="clientes.html">Clientes</a></li>
+        <li><a href="productos.html">Productos</a></li>
+        <li><a href="index.html" class="cerrar-sesion">Cerrar sesión</a></li>
+    </ul>
 </div>
 
 <div class="content">
@@ -142,7 +29,7 @@
         <label for="cliente_busqueda" style="margin-right: 8px;">Buscar pedidos por cliente:</label>
         <input type="text" id="cliente_busqueda" name="cliente_busqueda" placeholder="Nombre del cliente">
         <button>Buscar</button>
-        <a href="total.html">Volver</a>
+        <button style="background-color: #333;;">Volver</button>
     </div>
 
     <div class="resumen-totales">
@@ -166,6 +53,7 @@
 
     <h2>Pedidos del 17/03/2025</h2>
 
+<div class="table-container">
     <table class="tabla-pedidos">
         <tr>
             <th>FECHA</th>
@@ -214,6 +102,12 @@
         </tr>
     </table>
 </div>
+
+<script>
+    document.getElementById('menu-toggle').onclick = function () {
+        document.querySelector('.nav-list').classList.toggle('open');
+    };
+</script>
 
 </body>
 </html>
