--- a/clientes.html
+++ b/clientes.html
@@ -2,95 +2,26 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Clientes</title>
-    <link rel="stylesheet" href="style/inicio.css">
+    <link rel="stylesheet" href="style/clientes.css">
     <link rel="stylesheet" href="style/navbar.css">
     <link rel="icon" href="images/icon.png">
-    <style>
-        body {
-            padding-top: 70px;
-        }
-        .tabla-clientes {
-            margin-top: 2rem;
-            width: 90%;
-            margin-left: auto;
-            margin-right: auto;
-            border-collapse: collapse;
-        }
-        .tabla-clientes th {
-            background-color: #e64e08;
-            color: white;
-            padding: 12px;
-        }
-        .tabla-clientes td {
-            background-color: #fff;
-            padding: 12px;
-            text-align: center;
-        }
-        .tabla-clientes tr:nth-child(even) td {
-            background-color: #f9f9f9;
-        }
-        .tabla-clientes .btn {
-            padding: 5px 10px;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        .btn-editar { background-color: #3498db; }
-        .btn-eliminar { background-color: #e74c3c; }
-        .form-busqueda {
-            margin: 1rem auto;
-            padding: 1rem;
-            width: 600px;
-            display: flex;
-            gap: 10px;
-            align-items: center;
-            justify-content: center;
-            background-color: #fff;
-            border-radius: 8px;
-        }
-        .form-busqueda input {
-            padding: 0.5rem;
-            width: 250px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-        .form-busqueda button {
-            padding: 0.5rem 1rem;
-            font-weight: bold;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .form-busqueda .buscar { background-color: #e64e08; color: white; }
-        .form-busqueda .volver { background-color: #333; color: white; }
-        .add-cliente-btn {
-            margin: 1rem;
-            background-color: #e64e08;
-            padding: 0.7rem 1.2rem;
-            color: white;
-            font-weight: bold;
-            border: none;
-            border-radius: 6px;
-            cursor: pointer;
-            margin-right: 78%;
-        }
-        h2 {
-            text-align: center;
-            margin-top: 0;
-        }
-    </style>
 </head>
 <body>
-    <div class="navbar">
-        <a href="inicio.html">Inicio</a>
-        <a href="pedidos.html">Agregar Pedidos</a>
-        <a href="total.html">Total de Pedidos</a>
-        <a href="clientes.html" class="active">Clientes</a>
-        <a href="productos.html">Productos</a>
-        <a href="index.html" style="float:right">Cerrar sesión</a>
-    </div>
+<!-- Navbar responsive -->
+<div class="navbar">
+    <button id="menu-toggle" aria-label="Abrir menú">☰</button>
+    <ul class="nav-list">
+        <li><a href="inicio.html">Inicio</a></li>
+        <li><a href="pedidos.html">Agregar Pedidos</a></li>
+        <li><a href="total.html">Total de Pedidos</a></li>
+        <li><a href="clientes.html" class="active">Clientes</a></li>
+        <li><a href="productos.html">Productos</a></li>
+        <li><a href="index.html" class="cerrar-sesion">Cerrar sesión</a></li>
+    </ul>
+</div>
 
     <form class="form-busqueda">
         <label for="cliente">Buscar cliente:</label>
@@ -102,6 +33,7 @@
     <button class="add-cliente-btn">+ Agregar Cliente</button>
 
     <h2>Tabla de Clientes</h2>
+    <div class="tabla-container">
     <table class="tabla-clientes">
         <thead>
             <tr>
@@ -133,5 +65,12 @@
             </tr>
         </tbody>
     </table>
+    </div>
+
+<script>
+    document.getElementById('menu-toggle').onclick = function () {
+    document.querySelector('.nav-list').classList.toggle('open');
+    };
+</script>
 </body>
 </html>
